# toy-mint-emulator

./: .gitignore  README.md  pyproject.toml
model/: trained_model.pth
reports/: run.py
scripts/benchmark/Grid/: main.py
scripts/benchmark/LHS/: main.py
scripts/emulating/: main.py
scripts/training/: main.py
src/benchmark/: benchmark.py  config.py  data_handler.py  lhs_method.py  main.py  metrics.py  models.py  orderly.py  predict.py  run_benchmark.py  save_results.py  train_eval.py  utils.py
src/data/: data.py
src/post/: post.py  run_post.py
start/: main.py
tests/data/: experiment_results.csv
