[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toy-mint-emulator"
version = "0.1.0"
description = "A testing ground for Neural Network architectures"
authors = [{name = "Cosmo Santoni", email = "cosmo.santoni@imperial.ac.uk"}]
dependencies = [
    "numpy==1.24.2",
    "outpack @ git+https://github.com/mrc-ide/outpack-py@a6559018e4c8c0489956d512cf4ca900c39af2ff",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "scipy==1.11.1",
    "seaborn==0.12.2",
    "torch==2.0.1",
    "tqdm==4.65.0"
]

[tool.hatch.metadata]
allow-direct-references = true